# ML-deployment-packaging

./: .gitignore  Dockerfile  LICENSE  README.md  endpoint_testing.py  main.py  model_server.py  pyproject.toml  requirements.txt
core/: data_models.py  prediction.py
endpoint inference/: endpoint_testing.py
model/: trained_model.pkl
model_development/: exploratory_analysis.ipynb  model_training.ipynb  preprocessing.ipynb
tests/: test_data_models.py  test_prediction.py
