[project]
name = "diabetes-prediction"
version = "0.1.0"
package-mode = false
description = "A diabetes prediction machine learning model development and deployment."
authors = [
    { name = "Ahmad Faisal Ahmad Sazali", email = "faisallitic@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/AhmadFaisalAhmadSazali/ML-deployment-packaging"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
xgboost = "^2.1.3"
scikit-learn = "1.5.2"
imbalanced-learn = "0.13.0"
pandas = "2.2.3"
matplotlib = "3.10.0"
ipykernel = "6.29.5"
fastapi = "0.115.6"
fastapi-cli = "0.0.7"

[tool.poetry.group.deploy.dependencies]
pandas = "2.2.3"
scikit-learn = "1.5.2"
imbalanced-learn = "0.13.0"
xgboost = "^2.1.3"
fastapi = "0.115.6"
fastapi-cli = "0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
blackdoc = "^0.3.9"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
